updating forms to use the latest from branch-lists.js

--- a/arches_hip/templates/views/forms/description.htm
+++ b/arches_hip/templates/views/forms/description.htm
@@ -66,9 +66,9 @@
                     </dd>
 
                     <dd class="margin-left-5" style="display: none;" data-bind="visible: true">
-                        <div data-bind="visible: branch_lists().length == 0" class="txt-color-blue">{% trans "No Descriptions Defined" %}</div>   
+                        <div data-bind="visible: getBranchLists().length == 0" class="txt-color-blue">{% trans "No Descriptions Defined" %}</div>   
                         
-                        <div data-bind='foreach: branch_lists'>
+                        <div data-bind='foreach: getBranchLists()'>
                             <dl class="margin-bottom-0"> 
                             
                                 <dd>
