--- a/arches_hip/templates/views/forms/measurement.htm
+++ b/arches_hip/templates/views/forms/measurement.htm
@@ -53,9 +53,9 @@
                     </dd>
 
                     <dd class="margin-left-5" style="display: none;" data-bind="visible: true">
-                        <div data-bind="visible: branch_lists().length == 0" class="txt-color-blue">{% trans "No Measurements Defined" %}</div>   
+                        <div data-bind="visible: getBranchLists().length == 0" class="txt-color-blue">{% trans "No Measurements Defined" %}</div>   
                         
-                        <div data-bind='foreach: branch_lists'>
+                        <div data-bind='foreach: getBranchLists()'>
                             <div class="arches-crud-record">
                                 <a href="javascript:void(0)" class="arches-CRUD-child" title="{% trans "Delete this measurement" %}"><i data-bind='attr: {"data-index": $index}' class="arches-CRUD-delete fa fa-times-circle"></i></a>
                                 <a href="javascript:void(0)" class="arches-CRUD-child arches-CRUD-edit" data-bind='attr: {"data-index": $index}' title="Edit this measurement"><span data-bind="{text: nodes.get('VALUE_OF_MEASUREMENT.E60', 'value')}" style="padding-right:2px;"></span><span data-bind="{text: nodes.get('UNIT_OF_MEASUREMENT.E55', 'label')}" style="padding-right:2px"></span><span class="text-muted arches-crud-type-identifier">(<span data-bind="{text: nodes.get('MEASUREMENT_TYPE.E55', 'label')}"></span>)</span>
