--- a/arches_hip/templates/views/forms/measurement.htm
+++ b/arches_hip/templates/views/forms/measurement.htm
@@ -20,13 +20,13 @@
                             <div class="col-xs-12">
 
                                 <!-- Measurement Type -->   
-                                <div style="width:30%; height: 36px; padding-top: 2px; display:inline-block;" class="select2 arches-select2-crud-form name-type hidden-xs" id="resource-measurement-type" data-bind="select2: {value: getEdited('MEASUREMENT_TYPE.E55', 'value'),  placeholder: '{% trans "Type" %}', dataKey: 'MEASUREMENT_TYPE.E55'}"></div>
+                                <div style="width:30%; height: 36px; padding-top: 2px; display:inline-block;" class="select2 arches-select2-crud-form name-type hidden-xs" id="resource-measurement-type" data-bind="select2: {value: getEditedNode('MEASUREMENT_TYPE.E55', 'value'),  placeholder: '{% trans "Type" %}', dataKey: 'MEASUREMENT_TYPE.E55'}"></div>
 
                                 <!-- Measurement Unit -->     
-                                <div style="width:30%; height: 36px; padding-top: 2px; padding-left: 4px; display:inline-block;" class="select2 arches-select2-crud-form name-type hidden-xs" id="resource-measurement-unit" data-bind="select2: {value: getEdited('UNIT_OF_MEASUREMENT.E55', 'value'), placeholder: '{% trans "Unit" %}', dataKey: 'UNIT_OF_MEASUREMENT.E55'}"></div>
+                                <div style="width:30%; height: 36px; padding-top: 2px; padding-left: 4px; display:inline-block;" class="select2 arches-select2-crud-form name-type hidden-xs" id="resource-measurement-unit" data-bind="select2: {value: getEditedNode('UNIT_OF_MEASUREMENT.E55', 'value'), placeholder: '{% trans "Unit" %}', dataKey: 'UNIT_OF_MEASUREMENT.E55'}"></div>
 
                                 <!-- Measurement Value -->
-                                <input class="form-control arches-form-input" id="measurement-value" style="width: 20%;" placeholder="value" data-bind="{value: getEdited('VALUE_OF_MEASUREMENT.E60', 'value')}">
+                                <input class="form-control arches-form-input" id="measurement-value" style="width: 20%;" placeholder="value" data-bind="{value: getEditedNode('VALUE_OF_MEASUREMENT.E60', 'value')}">
                             
                                 {% include 'views/components/add-item-button.htm' %}
 
