--- a/arches_hip/templates/views/forms/summary.htm
+++ b/arches_hip/templates/views/forms/summary.htm
@@ -22,7 +22,7 @@
                             <div class="col-xs-12">
 
                                 <div style="width:80%; height: 36px; padding-top: 2px;" class="select2 arches-select2-crud-form resource-type" id="resource-type-dropdown
-                                " data-bind="select2: {value: getEdited('RESOURCE_TYPE_CLASSIFICATION.E55', 'value'), placeholder: 'Type', multiple: false, dataKey: 'RESOURCE_TYPE_CLASSIFICATION.E55'}"></div>
+                                " data-bind="select2: {value: getEditedNode('RESOURCE_TYPE_CLASSIFICATION.E55', 'value'), placeholder: 'Type', multiple: false, dataKey: 'RESOURCE_TYPE_CLASSIFICATION.E55'}"></div>
 
                                 {% include 'views/components/add-item-button.htm' %}
 
@@ -88,12 +88,12 @@
 
                             <div class="col-xs-12">
                                         
-                                <input class="form-control arches-form-input hidden-xs" id="resource-name" style="width: 50%;" placeholder="Name" data-bind='value: getEdited("NAME.E41", "value")'>                                    
+                                <input class="form-control arches-form-input hidden-xs" id="resource-name" style="width: 50%;" placeholder="Name" data-bind='value: getEditedNode("NAME.E41", "value")'>                                    
 
                                 <!-- Spacer (for xs screens) -->
                                 <div class="margin-top-5 hidden-sm hidden-md hidden-lg"></div>
                                 
-                                <div style="width:30%; height: 36px; padding-top: 2px;" class="select2 arches-select2-crud-form name-type hidden-xs" id="resource-name-type" data-bind="select2: {value: getEdited('NAME_TYPE.E55', 'value'), placeholder: 'Type', dataKey: 'NAME_TYPE.E55'}"></div>
+                                <div style="width:30%; height: 36px; padding-top: 2px;" class="select2 arches-select2-crud-form name-type hidden-xs" id="resource-name-type" data-bind="select2: {value: getEditedNode('NAME_TYPE.E55', 'value'), placeholder: 'Type', dataKey: 'NAME_TYPE.E55'}"></div>
 
                                 <!-- Spacer (for xs screens) -->
                                 <div class="margin-top-5 hidden-sm hidden-md hidden-lg"></div>
@@ -169,13 +169,13 @@
                                 <div class="margin-top-5 hidden-sm hidden-md hidden-lg"></div>
 
                                 <div class="col-sm-6" style="padding-right: 5px;padding-left: 0px;">
-                                    <div style="height: 36px; width:100%" class="select2 arches-select2-crud-form" id="date-type" data-bind="select2: {value: getEdited('BEGINNING_OF_EXISTENCE_TYPE.E55,END_OF_EXISTENCE_TYPE.E55', 'value'), dataKey: 'important_dates'}">
+                                    <div style="height: 36px; width:100%" class="select2 arches-select2-crud-form" id="date-type" data-bind="select2: {value: getEditedNode('BEGINNING_OF_EXISTENCE_TYPE.E55,END_OF_EXISTENCE_TYPE.E55', 'value'), dataKey: 'important_dates'}">
                                     </div>
                                 </div>
 
                                 <div class="col-sm-4 form-group" style="padding-left: 0px; padding-right: 0px; width: 30%;">
                                     <div class="input-group datetimepicker" style ="width:100%; height: 34px;" >
-                                        <input type="text" id="date" placeholder="{% trans 'Date' %}" class="form-control datepicker" data-date-format="YYYY-MM-DD" data-bind="{value: getEdited('START_DATE_OF_EXISTENCE.E49,END_DATE_OF_EXISTENCE.E49', 'value')} ">
+                                        <input type="text" id="date" placeholder="{% trans 'Date' %}" class="form-control datepicker" data-date-format="YYYY-MM-DD" data-bind="{value: getEditedNode('START_DATE_OF_EXISTENCE.E49,END_DATE_OF_EXISTENCE.E49', 'value')} ">
                                         <span class="input-group-addon"><i class="fa fa-calendar"></i></span>
                                     </div>
                                 </div>
@@ -246,7 +246,7 @@
                     <dd>
                         <div class="row">
                             <div class="col-xs-12">
-                                <div style="width:80%; height: 36px; padding-top: 2px;" class="select2 arches-select2-crud-form resource-type" id="keyword-dropdown" data-bind="select2: {value: getEdited('KEYWORD.E55', 'value'), placeholder: 'Subject', dataKey: 'KEYWORD.E55'}"></div>
+                                <div style="width:80%; height: 36px; padding-top: 2px;" class="select2 arches-select2-crud-form resource-type" id="keyword-dropdown" data-bind="select2: {value: getEditedNode('KEYWORD.E55', 'value'), placeholder: 'Subject', dataKey: 'KEYWORD.E55'}"></div>
 
                                 <!-- Spacer (for xs screens) -->
                                 <div class="margin-top-5 hidden-sm hidden-md hidden-lg"></div>
